april commit index.html

--- a/index.html
+++ b/index.html
@@ -220,6 +220,227 @@
 
         </div>
     </div>
+
+
+
+
+
+
+
+    <!-- 推荐房源 -->
+    <div class="box_out_sp">
+        <div class="inner_box_sp">
+            <div class="title_box">
+                <a href="#" style="font-size: .2rem;color: black;">房源分间</a>
+            </div>
+            <div class="will_big_huxing">
+
+
+                <div class="huxing_left_img">
+                    <img src="./image/SecondHandList/img1.png" alt="" class="im">
+                </div>
+
+
+                <div class="huxing_right_box">
+                    <div class="huxing_top_text" id="tuijian_title">文化部中间层 一层带...</div>
+                    <div class="huxing_middle_text">
+                        <div class="fangyuan_inner">
+                            <div>2室一厅98㎡南北</div>
+                            <div class="money">280万</div>
+                        </div>
+                        <div class="fangyuan_inner">
+                            <div>江庙北里</div>
+                            <div>14268元/平</div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div class="t rig">学区房</div>
+                    </div>
+                </div>
+            </div>
+            <div class="want_say">
+                <div class="san_jiao"></div>
+                <span>推荐理由：同户型、通风好、采光好</span>
+            </div>
+            <div style=" border-bottom: 1px solid rgb(222, 233, 240);width:100%;height: 0.2rem;"></div>
+
+
+
+            <div class="will_big_huxing">
+
+
+                <div class="huxing_left_img">
+                    <img src="./image/SecondHandList/img1.png" alt="" class="im">
+                </div>
+
+
+                <div class="huxing_right_box">
+                    <div class="huxing_top_text" id="tuijian_title">文化部中间层 一层带...</div>
+                    <div class="huxing_middle_text">
+                        <div class="fangyuan_inner">
+                            <div>2室一厅98㎡南北</div>
+                            <div class="money">280万</div>
+                        </div>
+                        <div class="fangyuan_inner">
+                            <div>江庙北里</div>
+                            <div>14268元/平</div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div class="t rig">学区房</div>
+                    </div>
+                </div>
+            </div>
+            <div class="want_say">
+                <div class="san_jiao"></div>
+                <span>推荐理由：同户型、通风好、采光好</span>
+            </div>
+            <div style=" border-bottom: 1px solid rgb(222, 233, 240);width:100%;height: 0.2rem;"></div>
+
+
+
+            <div class="will_big_huxing">
+
+
+                <div class="huxing_left_img">
+                    <img src="./image/SecondHandList/img1.png" alt="" class="im">
+                </div>
+
+
+                <div class="huxing_right_box">
+                    <div class="huxing_top_text" id="tuijian_title">文化部中间层 一层带...</div>
+                    <div class="huxing_middle_text">
+                        <div class="fangyuan_inner">
+                            <div>2室一厅98㎡南北</div>
+                            <div class="money">280万</div>
+                        </div>
+                        <div class="fangyuan_inner">
+                            <div>江庙北里</div>
+                            <div>14268元/平</div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div class="t rig">学区房</div>
+                    </div>
+                </div>
+            </div>
+            <div class="want_say">
+                <div class="san_jiao"></div>
+                <span>推荐理由：同户型、通风好、采光好</span>
+            </div>
+            <div style=" border-bottom: 1px solid rgb(222, 233, 240);width:100%;height: 0.2rem;"></div>
+
+
+
+            <div class="will_big_huxing">
+
+
+                <div class="huxing_left_img">
+                    <img src="./image/SecondHandList/img1.png" alt="" class="im">
+                </div>
+
+
+                <div class="huxing_right_box">
+                    <div class="huxing_top_text" id="tuijian_title">文化部中间层 一层带...</div>
+                    <div class="huxing_middle_text">
+                        <div class="fangyuan_inner">
+                            <div>2室一厅98㎡南北</div>
+                            <div class="money">280万</div>
+                        </div>
+                        <div class="fangyuan_inner">
+                            <div>江庙北里</div>
+                            <div>14268元/平</div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div class="t rig">学区房</div>
+                    </div>
+                </div>
+            </div>
+            <div class="want_say">
+                <div class="san_jiao"></div>
+                <span>推荐理由：同户型、通风好、采光好</span>
+            </div>
+            <div style=" border-bottom: 1px solid rgb(222, 233, 240);width:100%;height: 0.2rem;"></div>
+
+
+
+            <div class="will_big_huxing">
+
+
+                <div class="huxing_left_img">
+                    <img src="./image/SecondHandList/img1.png" alt="" class="im">
+                </div>
+
+
+                <div class="huxing_right_box">
+                    <div class="huxing_top_text" id="tuijian_title">文化部中间层 一层带...</div>
+                    <div class="huxing_middle_text">
+                        <div class="fangyuan_inner">
+                            <div>2室一厅98㎡南北</div>
+                            <div class="money">280万</div>
+                        </div>
+                        <div class="fangyuan_inner">
+                            <div>江庙北里</div>
+                            <div>14268元/平</div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div class="t rig">学区房</div>
+                    </div>
+                </div>
+            </div>
+            <div class="want_say">
+                <div class="san_jiao"></div>
+                <span>推荐理由：同户型、通风好、采光好</span>
+            </div>
+            <div style=" border-bottom: 1px solid rgb(222, 233, 240);width:100%;height: 0.2rem;"></div>
+
+            <div class="fang_msg">
+                <div class="one_msg last"><a href="#">查看更多相似房源</a></div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- footer -->
+    <footer>
+        <div class="out_foot_box">
+            <div class="foot_top_text">北京找房无忧 > 首页</div>
+            <div class="foot_imgs">
+                <div class="foot_img">
+                    <div><img src="./image/index/apple.png" alt=""></div>
+                    <div class="fot"><span>Phone</span><span>客户端</span></div>
+                </div>
+                <div class="foot_img">
+                    <div><img src="./image/index/android.png" alt=""></div>
+                    <div class="fot"><span>Android</span><span>客户端</span></div>
+                </div>
+            </div>
+            <div class="fo_text">
+                <p>背景找房无忧房地产经纪公司</p>
+                <p>网络经济许可证京ICP20160821号</p>
+            </div>
+        </div>
+    </footer>
+    <!-- 联系人 -->
+    <div class="tel_people">
+        <div class="inner_tel_pel">
+            <div class="tt_box">
+                <a href="">
+                    <div><img src="./image/SecondHandList/user.png" alt=""></div>
+                    <div class="tex_pel">联系经纪人</div>
+                </a>
+            </div>
+
+            <div class="tt_box">
+                <div><img src="./image/SecondHandList/xin.png" alt=""></div>
+                <div class="tex_pel">关注</div>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/lunbo_to_index.js"></script>
     <script type="text/javascript">
         var map = new BMapGL.Map("container");
