april will commit sp html

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 
     <script src="./js/lunbo_to_index.js"></script>
     <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/view_how.js"></script>
     <script type="text/javascript">
         var map = new BMapGL.Map("container");
         // 创建地图实例 
